fix: disable smaller title spans on mobile sidebars

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -72,6 +72,11 @@ html > body[data-scroll-locked] {
   white-space: nowrap;
 } */
 
+/* disable smaller title spans on mobile */
+p > span.style-tab-normal {
+  display: none;
+}
+
 /* use smaller title spans by default */
 #nd-docs-layout > .items-end > a > span.style-tab-normal {
   display: inline-block;
